# aiter

./: README.md  indexer_gfx1250_optimization.md  pr-body.md  pyproject.toml  requirements.txt  run_moe_perf.sh  run_moe_test.sh  setup.py  split-tests-update-summary.md
.github/: actionlint.yaml  runner-config.yml
aiter/: __init__.py  fused_moe.py  fused_moe_dp_shared_expert.py  mla.py  tuned_gemm.py
docs/: aiter_container_nonroot_setup.md  gemm_kernel_replacement_notes.md
gradlib/: README.md
op_tests/: test_batched_gemm_bf16.py  test_causal_conv1d_prefill_split_qkv.py  test_causal_conv1d_update.py  test_concat_cache_mla.py  test_dsv4_rotate_quant.py  test_f4gemm.py  test_flydsl_compress_attn.py  test_flydsl_compress_attn_gfx1250.py  test_flydsl_grouped_gemm_gfx1250.py  test_flydsl_pa_mqa_logits_fp4.py  test_flydsl_pa_mqa_logits_fp4_prefill.py  test_flydsl_qk_norm_rope_quant.py  test_fmha_fwd_mxfp8_asm.py  test_fmha_fwd_with_sink_asm.py  test_fmha_fwd_with_sink_varlen_asm.py  test_fused_kv_norm_rope_group_quant.py  test_fused_qk_norm_mrope_cache_quant.py  test_fused_qk_norm_rope_1way_perhead.py  test_fused_qk_norm_rope_cache_quant.py  test_fused_qk_norm_rope_group_quant.py  test_fused_qknorm_idxrqknorm.py  test_gated_delta_rule.py  test_gated_rmsnorm_fp8_quant.py  test_gemm_a8w8_blockscale.py  test_gemm_a8w8_bpreshuffle_pad_k.py  test_jit_dir_with_enum.py  test_metadata.py  test_mha.py  test_mhc.py  test_mla.py  test_mla_decode_gate.py  test_mla_decode_pagesize64.py  test_mla_persistent.py  test_mla_persistent_round_robin.py  test_mla_prefill_ps.py  (+29 more)
(+855 files in other folders)
